# parser-spimex-sync

./: alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 2025_03_25_1411-c15502d9a53e_create_table_spimex.py
app/: .env  config.py  database.py  main.py  parser.py  process_spimex_files.py
